# lox

./: Cargo.toml  README.md  your_program.sh
.codecrafters/: compile.sh  run.sh
src/: lex.rs  lib.rs  main.rs  parse.rs
