[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
bytes = "1.3.0"
clap = { version = "4.5.16", features = ["derive"] }
thiserror = "1.0.63"
